--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-config": "^1.5.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
+    "react-native-vector-icons": "^9.2.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
