--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "yup": "^1.1.1"
   },
   "devDependencies": {
